--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -168,6 +168,7 @@ body {
             padding: 5px;
             img {
               width: 100%;
+              max-height: 80px;
             }
               a {
                   color: #111;
